# portfolio_advance

./: index.html  package-lock.json  package.json  vite.config.ts  vite.config.ts.timestamp-1734091891594-6870729c88ea1.mjs
angular/dataconnect/: dataconnect.yaml
backend/crow/: CMakeLists.txt  main.cpp
backend/django/: requirements.txt
backend/django/contact/: admin.py  apps.py  models.py  urls.py  views.py
backend/django/portfolio/: settings.py
backend/dragon/src/: build.rs  main.rs
backend/flask/: app.py  rust_wrapper.py
backend/laravel/: Dockerfile  composer.json
backend/laravel/app/Models/: Newsletter.php
backend/rails/: Dockerfile
backend/rails/app/config/: routes.rb
backend/rails/app/controllers/: blog_posts_controller.rb
backend/rails/app/models/: blog_post.rb
prisma/: schema.prisma
project/: .env  README.md  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts
project/backend/django/: requirements.txt
project/backend/rails/: Gemfile
project/src/components/: Contact.tsx  FeaturedProjects.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Projects.tsx  Skills.tsx
project/src/hooks/: useFirebase.ts
project/src/lib/: api.ts
project/src/pages/: Contact.tsx
project/src/types/: project.ts
src/: App.tsx  index.css
src/components/: BackendStatus.tsx  ChatBot.tsx  Footer.tsx  Newsletter.tsx  ProjectList.tsx  Projects.tsx
src/db/: sqlite.ts
src/hooks/: useBackendStatus.ts  useProjects.ts
src/pages/: About.tsx  Blog.tsx  Home.tsx  Projects.tsx  project.tsx  projects1.tsx
(+6 files in other folders)
